--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:tabIndicatorColor="@android:color/white"
-                app:tabIndicatorHeight="@dimen/dimens_6" />
+                app:tabIndicatorHeight="@dimen/dimens_6"
+                app:tabTextAppearance="@style/CustomTabsTextAppearance" />
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.viewpager.widget.ViewPager
