--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,5 @@
     <dimen name="dimens_4">4dp</dimen>
     <dimen name="dimens_20">20dp</dimen>
     <dimen name="dimens_200">200dp</dimen>
+    <dimen name="dimens_300">300dp</dimen>
 </resources>
